Vaadin 7 conversion